[package]
name = "bitvault"
version = "1.3.0"
edition = "2021"
authors = ["overcuriousity, originally Daniel Szabo <daniel@microbin.eu> and contributors"]
license = "GPL-3.0-only"
description = "Simple, performant and puristic, entirely self-contained Pastebin and URL shortener."
readme = "README.md"
repository = "https://github.com/overcuriousity/bitvault"
keywords = ["pastebin", "filesharing", "bitvault", "actix", "selfhosted"]
categories = ["pastebins"]


[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = { version = "4", default-features = false, features = ["compat","compress-brotli", "compress-gzip", "cookies", "http2", "macros", "unicode"] }
actix-web-httpauth = "0.8.2"
askama = "0.15"
askama-filters = { version = "0.1.3", features = ["chrono"] }
bytesize = { version = "2.3", features = ["serde"] }
chrono = "0.4.19"

clap = { version = "4.5.7", features = ["derive", "env"] }

env_logger = "0.11.3"
futures = "0.3"
harsh = "0.2"
html-escape = "0.2.13"

lazy_static = "1.4.0"
linkify = "0.10.0"
log = "0.4.21"
magic-crypt = "4.0.1"
mime_guess = "2.0.4"
once_cell = "1.19.0"
qrcode-generator = "5.0.0"
rand = "0.9.2"
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
rust-embed = "8.3.0"
sanitize-filename = "0.6.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
syntect = { version = "5.2.0", default-features = false }
zip = "2.4.2"

[features]
default = ["__zstd", "__syntect-fast", "dep:rusqlite"]
no-c-deps = ["__syntect-rust"]

__syntect-fast = ["syntect/default-onig"]
__syntect-rust = ["syntect/default-fancy"]
__zstd = ["actix-web/compress-zstd"]

[profile.release]
lto = true
strip = true
